--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-router-dom": "^6.9.0",
     "rooks": "^7.4.4"
   },
