--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint ./src/**/*.{ts,tsx}",
-    "format": "prettier --write ./src/**/*.{ts,tsx,css} && eslint --fix ./src/**/*.{ts,tsx}"
+    "format": "prettier --write ./src/**/*.{ts,tsx,css} && eslint --fix ./src/**/*.{ts,tsx}",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
