--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint ./src/**/*.{ts,tsx}",
-    "format": "prettier --write ./src/**/*.{ts,tsx,css} && eslint --fix ./src/**/*.{ts,tsx}"
+    "format": "prettier --write ./src/**/*.{ts,tsx,css} && eslint --fix ./src/**/*.{ts,tsx}",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
@@ -51,6 +53,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^21.1.0",
+    "msw": "^1.1.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
